Setting up Bootsrap

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./input.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="style.scss">
+    <script type="module" src="main.js"></script>
     <title>Hem</title>
 </head>
 <body>
@@ -14,5 +16,10 @@
             <li><a href="bootstrap.html">Bootstrap</a></li>
         </ul>
     </header>
+
+    <div class="container py-4 px-3 mx-auto">
+        <h1>Hello, Bootstrap and Parcel!</h1>
+        <button class="btn btn-primary">Primary button</button>
+      </div>
 </body>
 </html>
