--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.scss">
-    <script type="module" src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
-<body>
-    <header class="bg-primary">
+<body class="bg-primary-subtle">
+    <header class="bg-primary mb-4">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <div>
@@ -29,8 +30,26 @@
     </header>  
 
     <main>
-        <div>
-            <table id="tail">
+        <div id="text" class="border border-3 rounded shadow mb-5 bg-body m-auto">
+            <h2 class="p-2">Bootstrap</h2>
+            <p class="p-2">
+                Bootstrap är ett gratis CSS-ramverk med öppen källkod riktat mot responsiv, mobil-först front-end webbutveckling. Den innehåller HTML, 
+                CSS och (valfritt) JavaScript-baserade designmallar för typografi, formulär, knappar, navigering och andra gränssnittskomponenter.
+                <br>
+                Den officiella Bootstrap webbplats är här: <a href="https://getbootstrap.com/">Bootstrap</a> <br>
+                <br>
+                <strong>Fördelen</strong> med att använda Bootstrap för att styla denna del av webbplatsen är att det är väldigt lätt att använda och 
+                någorlunda enklare än Tailwind. Till exempel har det varit enkelt att göra tabellen och formuläret responsiva med 
+                hjälp av Bootstraps inbyggda grid-system. <br>
+                <strong>Nackdelen</strong> med att använda Bootstrap jämfört med andra ramverk är att det kan vara svårt att göra designen helt 
+                skräddarsydd. Till exempel är färgpaletten begränsad till inbyggda färger som primary, success och danger. 
+                Vid behov av specifika färger kan man behöva lägga till egen CSS-kod.
+
+
+            </p>
+        </div>
+        <div id="tableContainer" class="p-3 col-12 col-md-6 m-auto border border-3 rounded shadow mb-5 bg-body">
+            <table id="boot" class="table m-auto">
                 <thead>
                   <tr>
                     <th>Ramverk</th>
@@ -45,39 +64,42 @@
                 </tbody>
               </table>
         </div>
-
-        <form onsubmit="formData(event)">
-            <div class="mb-4">
-              <label for="frameWork">Ramverk</label>
-              <input type="text" id="frameWork" name="frameWork" placeholder="Ramverk">
+ 
+        <form action="#" onsubmit="formData(event)" class="p-3 col-12 col-md-6 m-auto border border-3 rounded shadow mb-5 bg-body">
+            <div class="mb-3">
+                <label class="form-label" for="frameWork">Ramverk</label>
+                <input type="text" class="form-control" id="frameWork" name="frameWork" placeholder="Ramverk">
             </div>
-            <div class="mb-4">
-              <label for="type">Typ</label>
-              <select name="type" id="type">
-                <option value="fronend">Frontend</option>
-                <option value="backend">Backend</option>
-              </select>
+            <div class="mb-3">
+                <label for="type" class="form-label">Typ</label>
+                <select name="type" id="type" class="form-select">
+                    <option value="frontend">Frontend</option>
+                    <option value="backend">Backend</option>
+                </select>
             </div>
-            <div class="mb-4">
-              <label for="lang">Språk</label>
-              <input type="text" name="lang" id="lang" placeholder="Ramverkets språk">
+            <div class="mb-3">
+                <label for="lang" class="form-label">Språk</label>
+                <input type="text" class="form-control" name="lang" id="lang" placeholder="Ramverkets språk">
             </div>
-            <div class="mb-4">
-              <label for="usage">Område</label>
-              <textarea name="usage" id="usage" placeholder="Användnings område"></textarea>
+            <div class="mb-3">
+                <label for="usage" class="form-label">Område</label>
+                <textarea name="usage" id="usage" class="form-control" placeholder="Användnings område"></textarea>
             </div>
-            <div class="mb-4">
-              <input type="checkbox" name="accept" id="accept">
-              <label for="accept">Jag accepterar att publicera dess uppgifter i tabellen ovan</label>
+            <div class="form-check mb-3">
+                <input type="checkbox" name="accept" id="accept" class="form-check-input">
+                <label for="accept" class="form-check-label">Jag accepterar att publicera dess uppgifter i tabellen ovan</label>
             </div>
             <div class="text-center">
-              <input type="submit" value="Spara">
+                <input type="submit" class="btn btn-primary" value="Spara">
             </div>
-          </form>
+        </form>
+        
     </main>
 
-    <footer>
-
+    <footer class="bg-light text-center py-3 mt-4">
+        <p class="m-auto">Fullstack-utveckling med ramverk, DT193G</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
