--- a/src/tailwind.html
+++ b/src/tailwind.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link href="./input.css" type="text/css" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Tailwind</title>
+    
 </head>
 <body class="bg-gradient-to-r from-pink-500 via-purple-500 to-indigo-500">
     <header class="bg-gradient-to-r from-indigo-700 via-purple-600 to-pink-600 h-fit p-2">
