--- a/src/tailwind.html
+++ b/src/tailwind.html
@@ -63,7 +63,7 @@
               </table>
         </div>
 
-        <form onsubmit="formData(event)" class="bg-white p-6 rounded-lg shadow-md max-w-md mx-auto my-10">
+        <form id="theForm" class="bg-white p-6 rounded-lg shadow-md max-w-md mx-auto my-10">
             <div class="mb-4">
               <label for="frameWork" class="block text-gray-700 font-bold mb-2">Ramverk</label>
               <input type="text" id="frameWork" name="frameWork" placeholder="Ramverk" class="border rounded-lg py-2 px-3 w-full" required>
