window.onload to call formData

--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -67,7 +67,7 @@
               </table>
         </div>
  
-        <form action="#" onsubmit="formData(event)" class="p-3 col-12 col-md-6 m-auto border border-3 rounded shadow mb-5 bg-body">
+        <form action="#" id="theForm" class="p-3 col-12 col-md-6 m-auto border border-3 rounded shadow mb-5 bg-body">
             <div class="mb-3">
                 <label class="form-label" for="frameWork">Ramverk</label>
                 <input type="text" class="form-control" id="frameWork" name="frameWork" placeholder="Ramverk" required>
